fixed the horizontal scroll bar

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,7 @@ body {
 
 * {
   font-family: 'Helvetica', sans-serif, serif;
+  overflow-x: hidden;
 
 }
 
